[gd_scene load_steps=7 format=3 uid="uid://bo8sp145wxa0q"]

[ext_resource type="Script" path="res://Characters/NPCs/NpcTemplate.gd" id="1_vuaue"]
[ext_resource type="Texture2D" uid="uid://dnnuln427hupe" path="res://PlaceholdersDeleteMe/Characters/IMG_4131.PNG" id="2_m81ip"]
[ext_resource type="Texture2D" uid="uid://cloq4kyanmte1" path="res://PlaceholdersDeleteMe/Basic_GUI_Bundle/ButtonsIcons/IconButton_Small_Rounded.png" id="3_37csj"]
[ext_resource type="Texture2D" uid="uid://xpkdc6gkupg" path="res://PlaceholdersDeleteMe/Icon - Star Enable.png" id="4_lec8h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i8k4g"]
size = Vector2(2670, 6395)

[sub_resource type="SpriteFrames" id="SpriteFrames_5bba1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_lec8h")
}],
"loop": true,
"name": &"active",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[node name="NPC_template" type="CharacterBody2D" groups=["NPC"]]
scale = Vector2(0.4, 0.4)
collision_layer = 16
collision_mask = 2
floor_snap_length = 5.0
script = ExtResource("1_vuaue")
moveSpeed = 215
npcTexture = ExtResource("2_m81ip")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(10.5, -308)
scale = Vector2(0.1, 0.1)
shape = SubResource("RectangleShape2D_i8k4g")

[node name="NPC" type="Sprite2D" parent="."]
position = Vector2(10, -310)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_m81ip")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="InteractOptions" type="Node2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(-220, -860)

[node name="Talk" type="TextureButton" parent="InteractOptions"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 150)
offset_left = -80.0
offset_top = 140.0
offset_right = 70.0
offset_bottom = 290.0
texture_normal = ExtResource("3_37csj")
ignore_texture_size = true
stretch_mode = 4

[node name="Shop" type="TextureButton" parent="InteractOptions"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(150, 150)
offset_left = 80.0
offset_top = 60.0
offset_right = 230.0
offset_bottom = 210.0
texture_normal = ExtResource("3_37csj")
ignore_texture_size = true
stretch_mode = 4

[node name="Quest" type="TextureButton" parent="InteractOptions"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(150, 150)
offset_left = 240.0
offset_top = 60.0
offset_right = 390.0
offset_bottom = 210.0
texture_normal = ExtResource("3_37csj")
ignore_texture_size = true
stretch_mode = 4

[node name="Gift" type="TextureButton" parent="InteractOptions"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(150, 150)
offset_left = 397.5
offset_top = 140.0
offset_right = 547.5
offset_bottom = 290.0
texture_normal = ExtResource("3_37csj")
ignore_texture_size = true
stretch_mode = 4

[node name="QuestIcon" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(3.8147e-06, -700)
sprite_frames = SubResource("SpriteFrames_5bba1")
animation = &"active"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="InteractOptions/Talk" to="." method="_on_talk_pressed"]
[connection signal="pressed" from="InteractOptions/Quest" to="." method="_on_quest_pressed"]
